minor tweak for pranati

--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -46,7 +46,7 @@ body {
     right: 40%;
   }
   .hero-container {
-    margin-top: 12em !important;
+    margin-top: 10% !important;
   }
   .header-info {
     position: absolute;
